# python-odt-template

./: CLAUDE.md  DEVELOPER_GUIDE.md  ODT_DOCX_FORMAT_GUIDE.md  README.en.md  README.md  README.zh-TW.md  README.zh.md  STRUCTURED_BLOCK_PLAN.md  new_plan.md  output.odt  pyproject.toml  template.odt
odftpl/: __init__.py  inline_image.py  listing.py  richtext.py  template.py
odttlp/: __init__.py  inline_image.py  richtext.py  template.py
odttpl/: __init__.py  inline_image.py  listing.py  richtext.py  structured_block.py  subdoc.py  template.py
tests/: make_templates.py  test_structured_block.py  test_template.py
tests/templates/: conditional.odt  listing.odt  loop_table.odt  simple_var.odt  span_wrap_var.odt  structured_block.odt  structured_block_in_cell.odt  structured_block_with_li.odt
