[project]
name = "odttlp"
version = "0.1.0"
description = "Python ODT template engine (jinja2-based, mirrors python-docx-template)"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = "LGPL-2.1-only"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["jinja2", "odf", "odt", "libreoffice", "template"]
dependencies = [
    "jinja2",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/yourname/python-odt-template"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
